css/led.css
body{
  background-color: rgba(0, 0, 0, 0.697) !important;
}

.ledpage-title{
  color: aliceblue !important;
  text-shadow: -6px 0px 15px rgba(240, 248, 255, 0.6), 6px 0px 15px rgba(240, 248, 255, 0.6);
  animation: blinking 15s ease-in-out infinite alternate;
}
@keyframes blinking {
	0% {opacity: 1;}
  15% {opacity: 1;}
  15.2% {opacity: 0.5;}
  15.8% {opacity: 0.5;}
  16% {opacity: 1;}
  33% {opacity: 1;}
  33.3% {opacity: 0.5;}
  34.0% {opacity: 0.5;}
  34.3% {opacity: 1;}
  67% {opacity: 1;}
  67.2% {opacity: 0.5;}
  67.8% {opacity: 0.5;}
  68% {opacity: 1;}
  69% {opacity: 1;}
  69.2% {opacity: 0.5;}
  69.8% {opacity: 0.5;}
  70% {opacity: 1;}
	100% {opacity: 1;}
}

p{
  margin: 0 !important;
  padding: 0 !important;
}

.billboard-container{
  background-image: url(../img/led/pripara/led25.webp);
  background-color: black;
  background-size: cover;
  background-position: center;
  height: 300px;
}

.billboard-img-container{
  background-color: rgba(0,0,0,0.5);
  height: 300px;

}


@media (width < 600px){
  .billboard-img-container h1{
    position: absolute;
    color: white;
    font-size: 42px;
    text-align: left;
    height:20px;
    line-height:60px;
    top: 0;
    left: 50%;
    transform: translate(-50%);
  }
}
@media (600px <= width){
  .billboard-img-container h1{
    color: white;
    font-size: 42px;
    text-align: center;
    height:20px;
    line-height:100px;
  }
}

.billboard-img-container img{
  height: 400px;
  width: 100vw;
  object-fit: cover;
  overflow: hidden;
}

.imgtext-container{
  position: relative;
  margin: 0 auto;
  width: 600px;
  height: 300px;
  background-image: url(../img/led/led01.jpg);
  background-size: contain;
  background-repeat: no-repeat;
  border-radius: 10px;
  filter: brightness(1.2);
}

@media (width < 480px){
  .imgtext-container{
    position: relative;
    margin: 0 auto;
    width: 100vw;
    height: 800px;
    background-image: url(../img/led/led01.jpg);
    background-size: contain;
    background-repeat: no-repeat;
  }
}
@media (480px <= width < 600px){
  .imgtext-container{
    position: relative;
    margin: 0 auto;
    width: 100vw;
    height: 800px;
    background-image: url(../img/led/led01.jpg);
    background-size: contain;
    background-repeat: no-repeat;
  }
}
@media (600px <= width < 960px){
  .imgtext-container{
    position: relative;
    margin: 0 auto;
    width: 600px;
    height: 1000px;
    background-image: url(../img/led/led01.jpg);
    background-size: contain;
    background-repeat: no-repeat;
  }
}
@media (960px <= width < 1280px){
  .imgtext-container{
    position: relative;
    margin: 0 auto;
    width: 768px;
    height: 1000px;
    background-image: url(../img/led/led01.jpg);
    background-size: contain;
    background-repeat: no-repeat;
  }
}
@media (1280px <= width){
  .imgtext-container{
    position: relative;
    margin: 0 auto;
    width: 1250px;
    height: auto;
    aspect-ratio: 16/9;
    background-image: url(../img/led/led01.jpg);
    background-size: contain;
    background-repeat: no-repeat;
  }
}

/* .title-textcontainer{
  position: absolute;
  top: 5;
  left: 70%;
  z-index: 5;
  color: aliceblue;
  font-size:14px;
  padding:0;
  margin:0;
  mix-blend-mode: difference;
} */


body {
  background-color: #100e17;
  font-family: 'Open Sans', sans-serif;
}

/* _______________________________________________________________________________ */
.carousel-wrapper {
  max-width: 100vw;
  overflow: hidden;
  width: 100%;
  position: relative;
  height: 750px;
}

.next {
  width: 40px;
  height: 40px;
  position: absolute;
  right: 0;
  bottom: 130px;
  transition: all 0.3s;
  z-index: 10;
  cursor: pointer;
}

.next::after {
  content: "";
  display: block;
  width: 15px;
  height: 15px;
  border-top: solid 3px #828282;
  border-right: solid 3px #828282;
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
  position: absolute;
  right: 15px;
  top: 10px;
}

.next:hover {
  background-color: #fff;
  transition: all 0.3s;
}

.prev {
  width: 40px;
  height: 40px;
  position: absolute;
  left: 0;
  bottom: 130px;
  transition: all 0.3s;
  z-index: 10;
  cursor: pointer;
}

.prev::after {
  content: "";
  display: block;
  width: 15px;
  height: 15px;
  border-top: solid 3px #828282;
  border-right: solid 3px #828282;
  -webkit-transform: rotate(-135deg);
  transform: rotate(-135deg);
  position: absolute;
  left: 15px;
  top: 10px;
}

.prev:hover {
  background-color: #fff;
  transition: all 0.3s;
}


.led-slider {
  width: 500vw;
  display: flex;
  margin: 0 auto;
}

.led-slider1 {
  transform: translateX(0);
  transition: all 0.3s;
}

.led-slider2 {
  transform: translateX(-100vw);
  transition: all 0.3s;
}

.led-slider3 {
  transform: translateX(-200vw);
  transition: all 0.3s;
}

.led-slider4 {
  transform: translateX(-300vw);
  transition: all 0.3s;
}

.led-slider5 {
  transform: translateX(-400vw);
  transition: all 0.3s;
}

.led-slider11 {
  transform: translateX(0);
  transition: all 0.3s;
}

.led-slider12 {
  transform: translateX(-100vw);
  transition: all 0.3s;
}

.led-slider13 {
  transform: translateX(-200vw);
  transition: all 0.3s;
}

.led-slider14 {
  transform: translateX(-300vw);
  transition: all 0.3s;
}

.led-slider15 {
  transform: translateX(-400vw);
  transition: all 0.3s;
}

.led-content {
  width: 100%;
  max-width: 100vw;
  height: 600px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.led-content1 {
}
.led-content2 {
}
.led-content3 {
}
.led-content4 {
}
.led-content5 {
}

.indicator-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: 1;
  column-gap: 5px;
  flex-direction: row;
  position: relative;
  left: 50%;
  transform: translate(-50%);
  margin-top: 15px;
  z-index: 3;
  height: fit-content;
  width: 65%;
}
/* ... */

